modify code and specs to work properly with Refinery::Authentication::Devise (to run specs this needs some sort of auth system and it makes sense to use the Refinery system).

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ nbproject
 
 # RubyMine
 .idea
+.generators
 
 # Backup
 *~
@@ -46,6 +47,8 @@ capybara-*html
 
 # rvm
 .rvmrc
+.ruby-gemset
+.ruby-version
 
 #rbenv
 .rbenv-version
